[package]
name = "solana-streamer"
description = "Solana Streamer"
documentation = "https://docs.rs/solana-streamer"
version = "1.18.22"
edition = "2021"

[dependencies]
async-channel = "1.9.0"
bytes = "1.5"
crossbeam-channel = "0.5.11"
futures-util = "0.3.29"
histogram = "0.6.9"
indexmap = "2.1.0"
itertools = "0.10.5"
libc = "0.2.152"
log = "0.4.20"
nix = "0.26.4"
pem = "1.1.1"
percentage = "0.1.0"
pkcs8 = { version = "0.8.0", features = ["alloc"] }
quinn = "0.10.2"
quinn-proto = "0.10.6"
rand = "0.8.5"
rcgen = "0.10.0"
rustls = { version = "0.21.11", features = ["dangerous_configuration"] }
smallvec = "1.13.2"
solana-metrics = "=1.18.22"
solana-perf = "=1.18.22"
solana-sdk = "=1.18.22"
thiserror = "1.0.56"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
x509-parser = "0.14.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-logger = "=1.18.22"

[lib]
crate-type = ["lib"]
name = "solana_streamer"
